Fix profile dialog having no height on mobile
- Caused by inner dialog div taking up 100% height (as well as width);
  both removed

--- a/src/styles/Avatar.module.scss
+++ b/src/styles/Avatar.module.scss
@@ -25,8 +25,8 @@
     }
 
     &__inner {
-        width: 100%;
-        height: 100%;
+        // width: 100%; PROBLEM
+        // height: 100%; PROBLEM
         padding: 0.5rem;
         // background-color: rgb(0 0 0 / 50%);
     }
